Add html for services section

--- a/index.html
+++ b/index.html
@@ -10,23 +10,45 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="splash">
-        <nav class="navigation">
-                <h5>Golden</h5>
-                <ul>
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">SERVICES</a></li>
-                    <li><a href="#">PORTFOLIO</a></li>
-                    <li><a href="#">ABOUT</a></li>
-                    <li><a href="#">CONTACT</a></li>
-                </ul>
-        </nav>
-        <div class="splash-inner">
-            <h3>Welcome To Our Studio!</h3>
-            <h1>IT'S NICE TO MEET YOU</h1>
-            <a href="#" class="btn">TELL ME MORE</a>
-        </div>
-
+<header class="splash">
+    <nav class="navigation">
+        <h5>Golden</h5>
+            <ul>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">SERVICES</a></li>
+                <li><a href="#">PORTFOLIO</a></li>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">CONTACT</a></li>
+            </ul>
+    </nav>
+    <div class="splash-inner">
+        <h3>Welcome To Our Studio!</h3>
+        <h1>IT'S NICE TO MEET YOU</h1>
+        <a href="#" class="btn">TELL ME MORE</a>
+    </div>
     </header>
+    <section class="services">
+        <div class="container">
+        <h1 class="section-title">SERVICES</h1>
+        <h3 class="section-subtitle">Nemo enim ipsam voluptatem quia voluptas.</h3>
+            <div class="services-row">
+                <div class="services-box">
+                    <i class="fas fa-shopping-basket"></i>
+                    <h2>E-Commerce</h2>
+                    <p>Morbi id pellentesque odio. Sed dictum arcu sagittis sapien rutrum, sed aliquam nisl sollicitudin. Curabitur ullamcorper venenatis sapien euismod facilisis. Quisque porttitor vestibulum elementum. </p>
+                </div>
+                    <div class="services-box">
+                    <i class="fas fa-laptop-code"></i>
+                    <h2>Responsive Web</h2>
+                    <p>Morbi id pellentesque odio. Sed dictum arcu sagittis sapien rutrum, sed aliquam nisl sollicitudin. Curabitur ullamcorper venenatis sapien euismod facilisis. Quisque porttitor vestibulum elementum. </p>
+                </div>
+                <div class="services-box">
+                    <i class="fas fa-lock"></i>
+                    <h2>Web Security</h2>
+                    <p>Morbi id pellentesque odio. Sed dictum arcu sagittis sapien rutrum, sed aliquam nisl sollicitudin. Curabitur ullamcorper venenatis sapien euismod facilisis. Quisque porttitor vestibulum elementum. </p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
