Add html for portfolio

--- a/index.html
+++ b/index.html
@@ -50,5 +50,43 @@
             </div>
         </div>
     </section>
+    <section class="portfolio">
+        <div class="container">
+            <h1 class="section-title">OUR PORTFOLIO</h1>
+            <h3 class="section-subtitle">Nemo enim ipsam voluptatem quia voluptas.</h3>
+            <div class="portfolio-row">
+                <div class="portfolio-box">
+                    <img src="images/Image (1).png">
+                    <h2>Ebony & Ivory</h2>
+                    <p>Branding</p>
+                </div>
+                <div class="portfolio-box">
+                    <img src="images/Image (2).png">
+                    <h2>Smart Stationary</h2>
+                    <p>Print Design</p>
+                </div>
+                <div class="portfolio-box">
+                    <img src="images/Image (3).png">
+                    <h2>Clever Poster</h2>
+                    <p>Print Design</p>
+                </div>
+                <div class="portfolio-box">
+                    <img src="images/Image (4).png">
+                    <h2>Vinyl Record</h2>
+                    <p>Product Mock-Up</p>
+                </div>
+                <div class="portfolio-box">
+                    <img src="images/Image (5).png">
+                    <h2>Treehouse Template</h2>
+                    <p>Web Design</p>
+                </div>
+                <div class="portfolio-box">
+                    <img src="images/Image (6).png">
+                    <h2>Burned Logo</h2>
+                    <p>Branding</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
