Add footer html

--- a/index.html
+++ b/index.html
@@ -90,3 +90,14 @@
     </section>
 </body>
 </html>
+<footer>
+    <div class="container">
+      <p>&copy Copyright 2014 FreebiesXpress.com</p>
+      <ul>
+        <li><a href="#"><i class="fab fa-twitter"></i>Twitter</a></li>
+        <li><a href="#"><i class="fab fa-facebook-f"></i>Facebook</a></li>
+        <li><a href="#"><i class="fab fa-pinterest-p"></i>Pinterest</a></li>
+        <li><a href="#"><i class="fab fa-google-plus-g"></i>Google+</a></li>
+      </ul>
+    </div>
+  </footer>
